#1 update ignore file list and add keywords for package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "sass:compile": "sass --update --compass --style=compressed --force scss:tmp/css"
   },
   "keywords": [
-    "cappuccino"
+    "cappuccino",
+    "css",
+    "scss",
+    "sass",
+    "responsive",
+    "frontend",
+    "framework",
+    "web"
   ],
   "author": "Tom Yu <yukangle@outlook.com> (http://www.kangleyu.me)",
   "license": "ISC",
