remove gulp-compass which seems that we will not use, but we can add it back if we try to use it again

--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "author": "Tom Yu <yukangle@outlook.com> (http://www.kangleyu.me)",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-compass": "^2.1.0"
+    "gulp": "^3.9.1"
   }
 }
